<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  android:paddingRight="@dimen/text_paddingRight">
  <ImageView
    android:id="@+id/undo"
    style="@style/DialogButton"
    android:contentDescription="@string/undo"
    android:scaleType="center"
    android:src="@drawable/content_undo_holo_dark"/>
  <ImageView
    android:id="@+id/redo"
    style="@style/DialogButton"
    android:contentDescription="@string/redo"
    android:scaleType="center"
    android:src="@drawable/content_redo_holo_dark"/>
  <ImageView
    android:id="@+id/add"
    style="@style/DialogButton"
    android:contentDescription="@string/add"
    android:scaleType="center"
    android:src="@drawable/content_new_holo_dark"/>
  <ImageView
    android:id="@+id/delete"
    style="@style/DialogButton"
    android:contentDescription="@string/delete"
    android:scaleType="center"
    android:src="@drawable/content_discard_holo_dark"/>
  <ImageView
    android:id="@+id/cancel"
    style="@style/DialogButton"
    android:contentDescription="@string/cancel"
    android:scaleType="center"
    android:src="@drawable/navigation_cancel_holo_dark"/>
  <ImageView
    android:id="@+id/accept"
    style="@style/DialogButton"
    android:contentDescription="@string/accept"
    android:scaleType="center"
    android:src="@drawable/navigation_accept_holo_dark"/>
  <ImageView
    android:id="@+id/config"
    style="@style/DialogButton"
    android:contentDescription="@string/configure"
    android:scaleType="center"
    android:src="@drawable/collections_new_label_holo_dark"/>
</LinearLayout>